--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -63,5 +63,12 @@
     "M005": {
         "isolated": "IS",
         "cross": "CR"
+    },
+    "M006": {
+        "new": "Новый",
+        "start": "Запущен",
+        "stop": "Остановлен",
+        "archive": "Архив",
+        "wait": "Ожидание"
     }
 }
