--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -66,7 +66,8 @@
     },
     "M006": {
         "new": "Новый",
-        "start": "Запущен",
+        "add": "Добавлен",
+        "run": "Запущен",
         "stop": "Остановлен",
         "archive": "Архив",
         "wait": "Ожидание"
