--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -70,6 +70,7 @@
         "run": "Запущен",
         "stop": "Остановлен",
         "archive": "Архив",
-        "wait": "Ожидание"
+        "wait": "Ожидание",
+        "deal": "В позиции"
     }
 }
