--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -17,6 +17,12 @@
         "largeDash": "большой пунктир",
         "sparseDot": "рассеянные точки"
     },
+    "bot-action": {
+        "startAll": "Запустить все",
+        "stopAll": "Остановить все",
+        "stopAllNotDeal": "Остановить все не в позиции",
+        "deleteAll": "Удалить все остановленные"
+    },
     "M001": {
         "1m": "1М",
         "3m": "3М",
